deployment/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mace-hooks
  labels:
    name: mace-hooks
